# btDemo

./: .emmyrc.json  .gitignore  AStar.lua  GameScene.lua  MapNode.lua  Player.lua  README.md  mapScene.lua
docs/: Android环境.md  BehaviorTree.md  Lua.md  QuardTree.md  TODO.md  UseBT.md
docs/Android/: UI线程.md
docs/Cocos/: Label与Text.md  Spine.md  TTF&Fnt.md  点击相关记录.md
docs/Net_Sync/: 网络游戏同步技术.md
docs/Toolchain/Emscripten/thirdLibTest/thirdLibTest/: CMakeLists.txt  main.cpp  thirdLibTest.vcxproj  thirdLibTest.vcxproj.filters
docs/Unity/: CharatorController.md  README.md  ThreeJS&Unity&ThingJS.md  eoolua.md
docs/luabinding/: README.md  operator.cpp  operator.md
docs/nodejs/: env.md
docs/protoBuffer/: parseProto.py
docs/python/: 环境安装.md
docs/testCode/: bit32.lua  bit64.lua  bit64_2.lua  closure.lua  coroutine.lua  encrypt&decrypt.lua  my.lua  selfVisit.lua  test.lua
docs/代码框架梳理/: Android环境.md  FGUI-Fix.md  README.md  TODO.md  代码梳理.md  天之炼狱动画加载.md  环境.md  网络协议.md
docs/优化技术/: DrawCall.md  Lua使用相关优化.md  复合组件制作drawcall优化.md  渲染.md  空间优化技术.md  闭包.md
docs/便捷记录/: 便捷记录.md
docs/插件调试/: emmylua.md  luaHelper.md  luaide-lite.md
docs/游戏中好玩的算法/: WFC.md
docs/项目/: BT_README.md  Intro.md  Time_Plan.md
learngl/docs/: 02三角形.md  03着色器.md  三角形.md
learngl/learngl/: learngl.sln
res/: model_2_1_0_10_1.plist  model_2_1_0_10_1.pvr.ccz
res/fairyGUIDemo/: Bag.fui  Basics.fui  Cooldown.fui  Emoji.fui  Extension.fui  (+10 more)
src/: AStar.lua  AStar.py  BTree.lua  GameScene.lua  MapNode.lua  Monster.lua  Player.lua  config.lua  game.lua  main.lua
third/: OrderMap.lua
(+324 files in other folders)
